--- a/index.html
+++ b/index.html
@@ -20,28 +20,12 @@
         <label for="Leeftijd">Leeftijd:</label>
         <input type="number" min="1" max="100" required />
 
-        <label for="Geslacht">Geslacht:</label>
-        <ul>
-          <li>
-            <label>man</label>
-            <input type="radio" />
-          </li>
-          <li>
-            <label>vrouw</label>
-
-            <input type="radio" />
-          </li>
-          <li>
-            <label>other</label>
-
-            <input type="radio" />
-          </li>
-        </ul>
+       
 
         <label for="FavKleur">FavKleur:</label>
         <input type="color" />
 
-        <button type="button">Login</button>
+        <button type="button">Submit</button>
       </form>
     </div>
   </body>
